force-app/main/default/objects/Account_Insight__mdt/Account_Insight__mdt.object-meta.xml
<CustomObject>
    <label>Account Insight</label>
    <pluralLabel>Account Insights</pluralLabel>
</CustomObject>