force-app/main/default/objects/Account_Insight__mdt/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <label>Function Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>