force-app/main/default/objects/Account_Insight__mdt/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>