force-app/main/default/objects/Account_Insight__mdt/fields/Post_To_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Post_To_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post To Chatter</label>
    <type>Checkbox</type>
</CustomField>