force-app/main/default/objects/Account_Insight__mdt/fields/Rule_Config__c.field-meta.xml
<CustomField>
    <fullName>Rule_Config__c</fullName>
    <label>Rule Config</label>
    <length>254</length>
    <type>Text</type>
</CustomField>