force-app/main/default/objects/Account_Insight__mdt/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>254</length>
    <type>Text</type>
</CustomField>